C++ Primer [5th edition]-solutions.txt
C++ Primer [5th edition] 

-Stanley B. Lippman

SOLUTIONS FOR EXCERSIZES
============================================================================


Ex 1.1
-Review the documentation for your compiler and determine what file
naming convention it uses. Compile and run the main program from page 2.

-sol:
first compile code 
	g++ FILE_NAME.cpp -o YOUR_PROGRAM_NAME

	(Replace FILE_NAME.cpp with the actual filename and YOUR_PROGRAM_NAME with the desired executable name 	(without the .exe extension))
	
run the code
	./YOUR_PROGRAM_NAME

****************************************************************

Ex 1.2
-Change the program to return -1. A return value of -1 is often treated
as an indicator that the program failed. Recompile and rerun your program to see how
your system treats a failure indicator from main.

-sol: 

No Change ,it runs as USUAL , apparently it doesn't influence the program only
might indicate an error state to the operating system.

****************************************************************

Ex 1.3 
-Write a program to print Hello, World on the standard output.

-sol:

    #include <iostream>
    int main()
    {
    std::cout<<"Hello, World"<<std::endl;
        return 0;
    }

****************************************************************

Ex 1.4
-Our program used the addition operator, +, to add two numbers. Write
a program that uses the multiplication operator, *, to print the product instead.

-sol:

    #include <iostream>
    int main()
    {
        std::cout << "Enter two numbers:" << std::endl;
        int v1 = 0, v2 = 0;
        std::cin >> v1 >> v2;
        std::cout << "The product of " << v1 << " and " << v2
        << " is " << v1 *4 v2 << std::endl;
        return 0;
    }

*************************************************************************

Ex 1.5
-We wrote the output in one large statement. Rewrite the program to use
a separate statement to print each operand.

-sol:

    #include <iostream>
    int main()
    {
        std::cout << "Enter two numbers:" << std::endl;
        int v1 = 0, v2 = 0;
        std::cin >> v1; 
        std::cin >> v2;
        std::cout << "The product of " 
        << v1;
        std::cout<< " and "; 
        std::cout<< v2;
        std::cout<< " is " ;
        std::cout<< v1 * v2 << std::endl;
        return 0;
    }

*************************************************************************

Ex 1.6
-Explain whether the following program fragment is legal.
    std::cout << "The sum of " << v1;
    << " and " << v2;
    << " is " << v1 + v2 << std::endl;
    If the program is legal, what does it do? If the program is not legal, why not? How
    would you fix it?
    
-sol:

its not legal in the sense of its missing "std:cout" before the << output 
operator,if we are using multiple statements to write it.

if we are using a single statements then we need to remove ";" and put all
the statements in the same line.

*****************************************************************************

Ex 1.7
-Compile a program that has incorrectly nested comments

-sol:
/*
* comment pairs /* */  cannot nest.
* ‘‘cannot nest’’ is considered source code,
* as is the rest of the program
*/
int main()
{
return 0;
}


ERROR:

unkk.cpp:4:3: error: extended character Γs not valid in an identifier
    4 | * ΓmΓannot nestΓs considered source code,
      |   ^
junkk.cpp:4:3: error: extended character Γs not valid in an identifier
junkk.cpp:4:12: error: extended character Γs not valid in an identifier
    4 | * Γannot nestΓs considered source code,
      |            ^
junkk.cpp:4:12: error: extended character Γs not valid in an identifier
junkk.cpp:3:23: error: 'cannot' does not name a type
    3 | * comment pairs /* */ cannot nest.
      |                       ^~~~~~

*******************************************************************************

Ex 1.8
-Indicate which, if any, of the following output statements are legal:
    std::cout << "/*";
    std::cout << "*/";
    std::cout << /* "*/" */;
    std::cout << /* "*/" /* "/*" */;
    After you’ve predicted what will happen, test your answers by compiling a program
    with each of these statements. Correct any errors you encounter.

-sol:

first statement output : /*
second statement output : */
third statement output : error as there is " missing
fourth statement output : /*